--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
+						<objectStoreV2>true</objectStoreV2>
 					<uri>https://anypoint.mulesoft.com</uri>
 					<muleVersion>4.3.0</muleVersion>
 					<!-- Deploy User Parameter -->
